--- a/steve-pikelny-interview.html
+++ b/steve-pikelny-interview.html
@@ -75,10 +75,6 @@
         border: 1px dashed;
       }
 
-      img {
-        max-width: 100%;
-      }
-
       .caption {
         max-width: 417px;
         padding: 0.5em;
@@ -97,6 +93,10 @@
       @media (max-width: 660px) {
         .display {
           flex-direction: column;
+        }
+
+        .display img {
+          max-width: 100%;
         }
       }
 
