--- a/index.html
+++ b/index.html
@@ -7,6 +7,104 @@
     <link rel="shortcut icon" type="image/x-icon" href="./favicon.ico">
     <title>Crypto Gateway</title>
 
+    <style type="text/css">
+      * {
+        margin: 0;
+        padding: 0;
+        font-family: monospace;
+      }
+
+      #header {
+        margin: 1em 0;
+      }
+
+      nav {
+        display: flex;
+        justify-content: center;
+        margin: 0.25em 0;
+      }
+
+      ul {
+        list-style: none;
+        display: inline-block;
+      }
+
+      li {
+        display: inline-block;
+        cursor: pointer;
+      }
+      li a {
+        color: black;
+      }
+
+      h1 {
+        text-align: center;
+        font-size: 40px;
+      }
+
+      article {
+        margin: auto;
+        max-width: 650px;
+        padding: 1em;
+      }
+
+      section {
+        margin-bottom: 2em;
+        padding: 1em;
+      }
+
+      .card {
+        border: 1px dashed;
+      }
+
+      .caption {
+        max-width: 417px;
+        padding: 0.5em;
+      }
+
+      .display {
+        /*border: 1px solid;*/
+        align-items: center;
+        display: flex;
+      }
+
+      .display img {
+        max-width: 510px;
+      }
+
+      @media (max-width: 660px) {
+        .display {
+          flex-direction: column;
+        }
+
+        .display img {
+          max-width: 100%;
+        }
+      }
+
+      .answer {
+        margin-top: 1em;
+        margin-bottom: 4em;
+      }
+
+      p {
+        font-size: 14px;
+        line-height: 1.3;
+        margin-top: 1em;
+      }
+
+      .tag {
+        color: #fff;
+        background: #000;
+        display: inline-block;
+        padding: 0.1em;
+        margin-top: 0.1em;
+      }
+
+      footer {
+        padding: 2em;
+      }
+    </style>
   </head>
   <body>
     <div id="header">
