--- a/steve-pikelny-interview.html
+++ b/steve-pikelny-interview.html
@@ -26,6 +26,7 @@
     <meta name="twitter:url" content="https://cryptogateway.0ms.co/steve-pikelny-interview">
 
     <style type="text/css">
+      @import url('https://fonts.googleapis.com/css2?family=Cutive+Mono&display=swap');
       * {
         margin: 0;
         padding: 0;
@@ -56,6 +57,7 @@
       }
 
       h1 {
+        font-family: Cutive Mono, monospace;
         text-align: center;
         font-size: 40px;
       }
