add definitive rarity guide

--- a/steve-pikelny-interview.html
+++ b/steve-pikelny-interview.html
@@ -8,8 +8,8 @@
     <title>CryptoGateway Interview w/ Steve Pikelny: CryptoGodKing</title>
 
     <meta name="description" content="Interview w/ Steve Pikelny: Creator of CryptoGodKing">
-    <meta name="twitter:image" content="https://mainnet.oss.nodechef.com/44000000.png">
-    <meta name="og:image" property="og:image" content="https://mainnet.oss.nodechef.com/44000000.png">
+    <meta name="twitter:image" content="./44000000.png">
+    <meta name="og:image" property="og:image" content="./44000000.png">
     <meta name="og:image:alt" content="CryptoGodKing #0">
     <meta name="description" content="Interview w/ Steve Pikelny: Creator of CryptoGodKing">
     <meta name="og:description" content="Interview w/ Steve Pikelny: Creator of CryptoGodKing">
