--- a/steve-pikelny-interview.html
+++ b/steve-pikelny-interview.html
@@ -312,6 +312,8 @@
           </p>
         </div>
       </section>
+
+      <h2 style="text-align: center; margin-top: 1em">See our <a href="./definitive-cryptogodking">CryptoGodKing rarity guide</a></h2>
     </article>
 
     <footer>(c) 2021 CryptoGateway</footer>
