--- a/fake-internet-money.html
+++ b/fake-internet-money.html
@@ -146,7 +146,7 @@
       <section class="card">
         <h2>Interview w/ Steve Pikelny: Fake Internet Money</h2>
         <div>08/09/21</div>
-        <div>Views: 538</div>
+        <div>Views: 1372</div>
 
         <div>
           SHARE:
@@ -167,7 +167,7 @@
       </section>
 
       <section>
-        <h2 style="text-align: center">Fake Internet Money will be availabile for purchase on <a href="https://artblocks.io/project/44/" target="_blank">artblock.io</a> ---, -/-/2021 12:00 EDT</h2>
+        <h2 style="text-align: center">Fake Internet Money will be availabile for purchase on <a href="https://artblocks.io/project/44/" target="_blank">artblock.io</a> , 9/1/2021 4:00 EDT</h2>
       </section>
 
       <section>
