--- a/modnar-wolf-wtwb.html
+++ b/modnar-wolf-wtwb.html
@@ -7,23 +7,23 @@
     <link rel="shortcut icon" type="image/x-icon" href="./favicon.ico">
     <title>CryptoGateway Interview w/ ModnarWolf: Where The Wind Blows</title>
 
-    <meta name="description" content="Interview w/ Steve Pikelny: Fake Internet Money">
-    <meta name="twitter:image" content="./img/FIM-testnet-30000264.png">
-    <meta name="og:image" property="og:image" content="./img/FIM-testnet-30000264.png">
+    <meta name="description" content="Interview w/ ModnarWolf: Where The Wind Blows">
+    <meta name="twitter:image" content="./img/mw-img/wtwb-img-01.jpg">
+    <meta name="og:image" property="og:image" content="./img/mw-img/wtwb-img-01.jpg">
     <meta name="og:image:alt" content="Fake Internet Money #0">
-    <meta name="description" content="Interview w/ Steve Pikelny: Fake Internet Money">
-    <meta name="og:description" content="Interview w/ Steve Pikelny: Fake Internet Money">
-    <meta name="twitter:description" content="Interview w/ Steve Pikelny: Fake Internet Money">
+    <meta name="description" content="Interview w/ ModnarWolf: Where The Wind Blows">
+    <meta name="og:description" content="Interview w/ ModnarWolf: Where The Wind Blows">
+    <meta name="twitter:description" content="Interview w/ ModnarWolf: Where The Wind Blows">
 
-    <meta name="keywords" content="art, nft, nfts, NFTs, NFT, crypto, ethereum, bitcoin, blockchain, artblocks, artblocks.io, generative, generative art, algorithmic art, crypto, gateway, cryptogateway, fake, internet, money, Fake Internet Money, steviep.xyz, steve, pikelny, steve pikelny, collectable, ">
-    <meta name="title" content="Interview w/ Steve Pikelny: Fake Internet Money">
-    <meta name="og:title" content="Interview w/ Steve Pikelny: Fake Internet Money">
-    <meta name="twitter:title" content="Interview w/ Steve Pikelny: Fake Internet Money">
-    <meta property="og:site_name" content="Interview w/ Steve Pikelny: Fake Internet Money">
+    <meta name="keywords" content="art, nft, nfts, NFTs, NFT, crypto, ethereum, bitcoin, blockchain, artblocks, artblocks.io, generative, generative art, algorithmic art, crypto, gateway, cryptogateway, modnarwolf.xyz, modnar, wolf, collectable ">
+    <meta name="title" content="Interview w/ ModnarWolf: Where The Wind Blows">
+    <meta name="og:title" content="Interview w/ ModnarWolf: Where The Wind Blows">
+    <meta name="twitter:title" content="Interview w/ ModnarWolf: Where The Wind Blows">
+    <meta property="og:site_name" content="Interview w/ ModnarWolf: Where The Wind Blows">
     <meta name="twitter:card" content="summary_large_image">
     <meta property="og:type" content="website">
-    <meta property="og:url" content="https://cryptogateway.0ms.co/fake-internet-money">
-    <meta name="twitter:url" content="https://cryptogateway.0ms.co/fake-internet-money">
+    <meta property="og:url" content="https://cryptogateway.0ms.co/modnar-wolf-wtwb">
+    <meta name="twitter:url" content="https://cryptogateway.0ms.co/modnar-wolf-wtwb">
 
     <style type="text/css">
       @import url('https://fonts.googleapis.com/css2?family=Cutive+Mono&display=swap');
@@ -326,7 +326,8 @@
         
         <div class="question">
           <p><strong>CG: That's actually pretty fascinating, I'll likely go down the nautical flag rabit whole. 
-            It has been a great chat ModnarWolf. I look forward to seeing the mints and how it all evolves. 
+            It has been a great chat ModnarWolf. Hope to ha you back here some day and I look forward to 
+            seeing the mints and how it all evolves. 
           </strong></p>
         </div>
 
@@ -345,4 +346,3 @@
     <footer>(c) 2021 CryptoGateway</footer>
   </body>
 </html>
-
