--- a/modnar-wolf-wtwb.html
+++ b/modnar-wolf-wtwb.html
@@ -10,7 +10,7 @@
     <meta name="description" content="Interview w/ ModnarWolf: Where The Wind Blows">
     <meta name="twitter:image" content="./img/mw-img/wtwb-img-01.jpg">
     <meta name="og:image" property="og:image" content="./img/mw-img/wtwb-img-01.jpg">
-    <meta name="og:image:alt" content="Fake Internet Money #0">
+    <meta name="og:image:alt" content="Interview w/ ModnarWolf: Where The Wind Blows">
     <meta name="description" content="Interview w/ ModnarWolf: Where The Wind Blows">
     <meta name="og:description" content="Interview w/ ModnarWolf: Where The Wind Blows">
     <meta name="twitter:description" content="Interview w/ ModnarWolf: Where The Wind Blows">
@@ -326,7 +326,7 @@
         
         <div class="question">
           <p><strong>CG: That's actually pretty fascinating, I'll likely go down the nautical flag rabit whole. 
-            It has been a great chat ModnarWolf. Hope to ha you back here some day and I look forward to 
+            It has been a great chat ModnarWolf. Hope to have you back here some day and I look forward to 
             seeing the mints and how it all evolves. 
           </strong></p>
         </div>
