--- a/maps-of-nothing.html
+++ b/maps-of-nothing.html
@@ -169,7 +169,7 @@
       </section>
 
       <section>
-        <h2 style="text-align: center">Maps of Nothing will be availabile for purchase on <a href="https://artblocks.io/project/44/" target="_blank">artblock.io</a> , _/_/2022 _:__ ET</h2>
+        <h2 style="text-align: center">Maps of Nothing will be available for purchase on <a href="https://artblocks.io/project/44/" target="_blank">artblock.io</a> , _/_/2022 _:__ ET</h2>
       </section>
 
       <section>
@@ -210,7 +210,7 @@
         <div class="answer">
           <p>SP: I'm not sure. I think it's just one of those things where, from a purely visual standpoint, it's an incredibly detailed pattern that doesn't always have an obvious order to it. If you cut a splotch out from a map and used some machine learning model to predict and redraw the missing segment, you probably couldn't do it in a lot of cases. But at the same time, maps aren't total chaos. There's still a logic and a flow to them, and I think your brain picks up on that even if it can't quite predict it. And I think that tension is really interesting.</p>
 
-          <p>And of course, the reason for all of this is that maps are an abstract representation of something else. If we're talking about street maps, for example, then the grid is really a function of geography and social happenstance. So looking at a map of Brooklyn, for example, there are plenty of places where the stree grid makes total sense... but then it randomly morphes into a completely different grid. Why is that? Well, sometimes it's an artifact of two towns that grew into each other 200 years ago. Sometimes the topography shifts and a different logic makes sense. And those are things that you're not really going to pick up on from just looking at visual patterns.</p>
+          <p>And of course, the reason for all of this is that maps are an abstract representation of something else. If we're talking about street maps, for example, then the grid is really a function of geography and social happenstance. So looking at a map of Brooklyn, for example, there are plenty of places where the street grid makes total sense... but then it randomly morphes into a completely different grid. Why is that? Well, sometimes it's an artifact of two towns that grew into each other 200 years ago. Sometimes the topography shifts and a different logic makes sense. And those are things that you're not really going to pick up on from just looking at visual patterns.</p>
         </div>
 
         <div class="question">
@@ -236,11 +236,11 @@
         </div>
 
         <div class="question">
-          <p><strong>CG: They're both such good names, and they really made things click for me. The legalese descriptions are also great. It really elevated FIM, espescially. It feels like a little less obvious of a choice with the maps though.</strong></p>
+          <p><strong>CG: They're both such good names, and they really made things click for me. The legalese descriptions are also great. It really elevated FIM, especially. It feels like a little less obvious of a choice with the maps though.</strong></p>
         </div>
 
         <div class="answer">
-          <p>SP: Yeah, that's a fair point. It wasn't obvious to me either, to be honest. But I chose to do it for a couple reasons. First, it draws a clearer through line between these two projects, which I think helps tease out some of those themes we were just talking about. Second, I think it's a really good way to highlight certain elements of the project without highlighting them. So for example, instead of saying "hey everyone, did you notice how the splotches sort of look like topography sometimes?", you can to say "whatever you do, don't interpret the splotches as topography". And this immediately puts the idea in the head of the viewer without telling them that it *should* look a certain way. It lets them come to their own conclusion, even if you're guiding them. Third, I think this also creates an interesting context in which to view the project. Like, by saying the maps have "no guarantee of accuracy or completeness, and are provided without any warranty whatsoever, either express or implied.", it sort of creates the impression that someone could actually mistake these for real maps, and purchase them with that intention. </p>
+          <p>SP: Yeah, that's a fair point. It wasn't obvious to me either, to be honest. But I chose to do it for a couple reasons. First, it draws a clearer through line between these two projects, which I think helps tease out some of those themes we were just talking about. Second, I think it's a really good way to highlight certain elements of the project without highlighting them. So for example, instead of saying "hey everyone, did you notice how the splotches sort of look like topography sometimes?", you can say "whatever you do, don't interpret the splotches as topography". And this immediately puts the idea in the head of the viewer without telling them that it *should* look a certain way. It lets them come to their own conclusion, even if you're guiding them. Third, I think this also creates an interesting context in which to view the project. Like, by saying the maps have "no guarantee of accuracy or completeness, and are provided without any warranty whatsoever, either express or implied.", it sort of creates the impression that someone could actually mistake these for real maps, and purchase them with that intention. </p>
         </div>
 
         <div class="question">
@@ -252,7 +252,7 @@
         </div>
 
         <div class="question">
-          <p><strong>CG: That's true. You don't want a bunch of apes thinking that they have claim to some steviep-created metaverse land.</strong></p>
+          <p><strong>CG: That's true. You don't want a bunch of apes thinking that they have a claim to some steviep-created metaverse land.</strong></p>
         </div>
 
         <div class="answer">
@@ -271,12 +271,12 @@
 
 
         <div class="answer">
-          <p>SP: Sure. I think it sort of boils down to the idea that these are simulations of paper maps -- each piece is faking the abstraction as well as the material that the abstraction is presented on. So all of the interesting visuals come out of the interplay between what reads as part of the "platonic" map being represented, and what reads as an artifact of the printing process representing that map. The spoltches are probably the best example, where it's never entirely obvious what they're supposed to be. Sometimes they look like they're aspects of the geopgraphy that a city grid is built on top of. Sometimes they look like they're supposed to be crime heat maps. Sometimes they just look like someone spilled coffee on the map. Some of my favorite outputs are the ones where the splotches either fade out or extend beyond the border of the drawn map. It can create a weird effect where they start out feeling like they're part of the "platonic" map, and end up as part of the printed map. The shadows are another example. Sometimes they look like they're cast by mountains, and other times they look like they're cast by paper crumples. </p>
+          <p>SP: Sure. I think it sort of boils down to the idea that these are simulations of paper maps -- each piece is faking the abstraction as well as the material that the abstraction is presented on. So all of the interesting visuals come out of the interplay between what reads as part of the "platonic" map being represented, and what reads as an artifact of the printing process representing that map. The splotches are probably the best example, where it's never entirely obvious what they're supposed to be. Sometimes they look like they're aspects of the geography that a city grid is built on top of. Sometimes they look like they're supposed to be crime heat maps. Sometimes they just look like someone spilled coffee on the map. Some of my favorite outputs are the ones where the splotches either fade out or extend beyond the border of the drawn map. It can create a weird effect where they start out feeling like they're part of the "platonic" map, and end up as part of the printed map. The shadows are another example. Sometimes they look like they're cast by mountains, and other times they look like they're cast by paper crumples. </p>
         </div>
 
 
         <div class="question">
-          <p><strong>CG: And adding to that, another through line between this project and Fake Internet Money is the inclusion of obvious misprints. And again, this is very funny because you have these very analogue errors injected into this thing that's supposed to be digitally rendered. Like, there's no reason for a map to be drasticlaly printed off center, or to be printed with low ink. It adds an appreciated level of absurdity to it. And this, combined with the project description really makes me wonder about the origin story of some of these maps. Like, what was the context in which this map was printed in such a fucked up way? Who's out there preparing a law suit against you because one of your maps failed to help them navigate their way to a dentist appointment?</strong></p>
+          <p><strong>CG: And adding to that, another through line between this project and Fake Internet Money is the inclusion of obvious misprints. And again, this is very funny because you have these very analogue errors injected into this thing that's supposed to be digitally rendered. Like, there's no reason for a map to be drastically printed off center, or to be printed with low ink. It adds an appreciated level of absurdity to it. And this, combined with the project description really makes me wonder about the origin story of some of these maps. Like, what was the context in which this map was printed in such a fucked up way? Who's out there preparing a lawsuit against you because one of your maps failed to help them navigate their way to a dentist appointment?</strong></p>
         </div>
 
         <div class="answer">
