--- a/maps-of-nothing.html
+++ b/maps-of-nothing.html
@@ -8,8 +8,8 @@
     <title>CryptoGateway Interview w/ Steve Pikelny: Maps of Nothing</title>
 
     <meta name="description" content="Interview w/ Steve Pikelny: Maps of Nothing">
-    <meta name="twitter:image" content="./img/FIM-testnet-30000264.png">
-    <meta name="og:image" property="og:image" content="./img/FIM-testnet-30000264.png">
+    <meta name="twitter:image" content="./img/497.png">
+    <meta name="og:image" property="og:image" content="./img/497.png">
     <meta name="og:image:alt" content="Maps of Nothing #0">
     <meta name="description" content="Interview w/ Steve Pikelny: Maps of Nothing">
     <meta name="og:description" content="Interview w/ Steve Pikelny: Maps of Nothing">
