--- a/maps-of-nothing.html
+++ b/maps-of-nothing.html
@@ -174,7 +174,7 @@
 
       <section>
         <p>
-          <em><a href="https://steviep.xyz" target="_blank">Steve Pikelny</a>, is a Brooklyn-based software engineer and multimedia artist who is quickly becoming one of the hottest artists in the NFT scene. </em>
+          <em><a href="https://steviep.xyz" target="_blank">Steve Pikelny</a>, is a Brooklyn-based software engineer and multimedia artist who is quickly becoming one of the hottest artists in the NFT scene. In our most recent conversation we talked about his upcoming project: Maps of Nothing</em>
         </p>
       </section>
 
