--- a/maps-of-nothing.html
+++ b/maps-of-nothing.html
@@ -7,15 +7,19 @@
     <link rel="shortcut icon" type="image/x-icon" href="./favicon.ico">
     <title>CryptoGateway Interview w/ Steve Pikelny: Maps of Nothing</title>
 
-    <meta name="description" content="Interview w/ Steve Pikelny: Maps of Nothing">
-    <meta name="twitter:image" content="./img/497.png">
-    <meta name="og:image" property="og:image" content="./img/497.png">
+    <meta name="description" content="Steve Pikelny, is a Brooklyn-based software engineer and multimedia artist who is quickly becoming one of the hottest artists in the NFT scene. In our most recent conversation we talked about his upcoming project: Maps of Nothing">
+    <meta name="og:description" content="Steve Pikelny, is a Brooklyn-based software engineer and multimedia artist who is quickly becoming one of the hottest artists in the NFT scene. In our most recent conversation we talked about his upcoming project: Maps of Nothing">
+    <meta name="twitter:description" content="Steve Pikelny, is a Brooklyn-based software engineer and multimedia artist who is quickly becoming one of the hottest artists in the NFT scene. In our most recent conversation we talked about his upcoming project: Maps of Nothing">
+
+
+    <meta name="twitter:image" content="https://cryptogateway.0ms.co/img/497.png">
+    <meta name="og:image" property="og:image" content="https://cryptogateway.0ms.co/img/497.png">
     <meta name="og:image:alt" content="Maps of Nothing #0">
-    <meta name="description" content="Interview w/ Steve Pikelny: Maps of Nothing">
-    <meta name="og:description" content="Interview w/ Steve Pikelny: Maps of Nothing">
-    <meta name="twitter:description" content="Interview w/ Steve Pikelny: Maps of Nothing">
+    <meta name="twitter:creator" content="@steviepxyz">
+    <meta name="twitter:site" content="@steviepxyz">
 
     <meta name="keywords" content="art, nft, nfts, NFTs, NFT, crypto, ethereum, bitcoin, blockchain, artblocks, artblocks.io, generative, generative art, algorithmic art, crypto, gateway, cryptogateway, maps, of, nothing, Maps of Nothing, steviep.xyz, steve, pikelny, steve pikelny, collectable, interview">
+
     <meta name="title" content="Interview w/ Steve Pikelny: Maps of Nothing">
     <meta name="og:title" content="Interview w/ Steve Pikelny: Maps of Nothing">
     <meta name="twitter:title" content="Interview w/ Steve Pikelny: Maps of Nothing">
