update next article link

--- a/maps-of-nothing.html
+++ b/maps-of-nothing.html
@@ -296,7 +296,7 @@
         </div>
       </section>
 
-      <h2 style="text-align: center; margin-top: 1em">Read our <a href="./steve-pikelny-interview">interview with Steve Pikelny on CryptoGodKing</a></h2>
+      <h2 style="text-align: center; margin-top: 1em">Read our <a href="./fake-internet-money">interview with Steve Pikelny on Fake Internet Money</a></h2>
 
     </article>
 
