--- a/maps-of-nothing.html
+++ b/maps-of-nothing.html
@@ -184,7 +184,7 @@
 
       <section>
         <div class="question">
-          <p><strong>CryptoGateway: Steve, thank you once again for joining my to talk about your newest project, Maps of Nothing.</strong></p>
+          <p><strong>CryptoGateway: Steve, thank you once again for joining me to talk about your newest project, Maps of Nothing.</strong></p>
         </div>
 
         <div class="answer">
