add misprint images

--- a/maps-of-nothing.html
+++ b/maps-of-nothing.html
@@ -287,6 +287,21 @@
           <p>SP: We'll leave that as an exercise to the viewer.</p>
         </div>
 
+
+      <section>
+        <div class="display">
+          <img src="./img/152000315.png">
+          <div class="caption" st><em>FIM #315</em></div>
+        </div>
+      </section>
+      <section>
+
+        <div class="display">
+          <img src="./img/620.png">
+          <div class="caption"><em>A little off center...</em></div>
+        </div>
+      </section>
+
         <div class="question">
           <p><strong>CG: Steve, thank you for joining me once again. It's always a pleasure, and I look forward to our next conversation.</strong></p>
         </div>
