--- a/maps-of-nothing.html
+++ b/maps-of-nothing.html
@@ -240,11 +240,11 @@
         </div>
 
         <div class="question">
-          <p><strong>CG: They're both such good names, and they really made things click for me. The legalese descriptions are also great. It really elevated FIM, especially. It feels like a little less obvious of a choice with the maps though.</strong></p>
+          <p><strong>CG: They're both such good names, and they really made things click for me. The pseudo-legal disclaimers are also great. It really elevated FIM, especially. It feels like a little less obvious of a choice with the maps though.</strong></p>
         </div>
 
         <div class="answer">
-          <p>SP: Yeah, that's a fair point. It wasn't obvious to me either, to be honest. But I chose to do it for a couple reasons. First, it draws a clearer through line between these two projects, which I think helps tease out some of those themes we were just talking about. Second, I think it's a really good way to highlight certain elements of the project without highlighting them. So for example, instead of saying "hey everyone, did you notice how the splotches sort of look like topography sometimes?", you can say "whatever you do, don't interpret the splotches as topography". And this immediately puts the idea in the head of the viewer without telling them that it *should* look a certain way. It lets them come to their own conclusion, even if you're guiding them. Third, I think this also creates an interesting context in which to view the project. Like, by saying the maps have "no guarantee of accuracy or completeness, and are provided without any warranty whatsoever, either express or implied.", it sort of creates the impression that someone could actually mistake these for real maps, and purchase them with that intention. </p>
+          <p>SP: Yeah, that's a fair point. It wasn't obvious to me either, to be honest. But I chose to do it for a few reasons. First, it draws a clearer through line between these two projects, which I think helps tease out some of those themes we were just talking about. Second, I think it's a really good way to highlight certain elements of the project without highlighting them. So for example, instead of saying "hey everyone, did you notice how the splotches sort of look like topography sometimes?", you can say "whatever you do, don't interpret the splotches as topography". And this immediately puts the idea in the head of the viewer without telling them that it *should* look a certain way. It lets them come to their own conclusion, even if you're guiding them. Third, I think this also creates an interesting context in which to view the project. Like, by saying the maps have "no guarantee of accuracy or completeness, and are provided without any warranty whatsoever, either express or implied.", it sort of creates the impression that someone could actually mistake these for real maps, and purchase them with that intention. </p>
         </div>
 
         <div class="question">
@@ -260,7 +260,8 @@
         </div>
 
         <div class="answer">
-          <p>SP: Seriously though, at the end of the day I also think it's important to remind people that this is an artwork that they're buying, and that they shouldn't necessarily expect utility or a monetary profit from them.</p>
+          <p>SP: Seriously though, at the end of the day I also think it's important to remind people that this is an artwork that they're buying, and that they shouldn't necessarily expect utility or a monetary profit from them. And ultimately, while I think the FIM disclaimer frames that project as "not an investment", the Maps disclaimer frames it as "not a product".
+          </p>
         </div>
 
         <section>
