--- a/maps-of-nothing.html
+++ b/maps-of-nothing.html
@@ -173,7 +173,7 @@
       </section>
 
       <section>
-        <h2 style="text-align: center">Maps of Nothing will be available for purchase on <a href="https://artblocks.io/project/44/" target="_blank">artblock.io</a> , _/_/2022 _:__ ET</h2>
+        <h2 style="text-align: center">Minting will unpause for Maps of Nothing on <a href="https://artblocks.io/project/316" target="_blank">artblock.io</a>, 6/13/2022 @ 12:00 EDT</h2>
       </section>
 
       <section>
@@ -204,7 +204,7 @@
         </div>
 
         <div class="answer">
-          <p>SP: Honestly, the reason is quite simple. When I started seriously exploring generative art, specifically the so-called "long-form" genre that Art Blocks specializes in, I asked myself what projects I could work on that were both conceptually rich and visually striking. And I came up with two answers: money and maps. The money was higher priority, so that came first. But once Fake Internet Money was wrapped up I started thinking about what a generative map project could look like.</p>
+          <p>SP: Honestly, the reason is quite simple. When I started seriously exploring generative art, specifically the so-called "long-form" genre that Art Blocks specializes in, I asked myself what projects I could work on that were both conceptually rich and visually striking. And I came up with two answers: money and maps. The money was higher priority, so that came first. But once <a href="https://artblocks.io/project/152">Fake Internet Money</a> was wrapped up I started thinking about what a generative map project could look like.</p>
         </div>
 
         <div class="question">
