--- a/dopamine-machines.html
+++ b/dopamine-machines.html
@@ -98,12 +98,7 @@
         flex-direction: column;
       }
 
-      .display img {
-        max-width: 510px;
-      }
-
-      .hero img {
-
+      .display img, .hero img {
         max-width: 100%;
       }
 
@@ -112,12 +107,9 @@
           flex-direction: column;
         }
 
-        .display img {
-          max-width: 100%;
-        }
       }
 
-      .answer {
+      .answer, q {
         margin-top: 1em;
         margin-bottom: 4em;
       }
@@ -138,6 +130,14 @@
 
       footer {
         padding: 2em;
+      }
+
+      q {
+        font-size: 2.5em;
+        margin: 50px 0.5em;
+        padding: 0.25em;
+        display: block;
+        border: 1px dashed;
       }
     </style>
 
@@ -224,6 +224,12 @@
           <p>SP: It's funny that people always tell me I'm prolific because I feel like 90% of my work comes in short, intense bursts, and I end up wasting a huge chunk of my time passively scrolling around the internet or aimlessly walking around my neighborhood. If I'm lucky, then maybe I'll spend a month slogging through an art theory book. So it very much feels like I spend most of my time doing nothing in particular, and that I'm not some hyperproductive artist. But I think a lot of conceptual work happens in the background while my brain is in this borderline catatonic state, and I constantly find myself daydreaming about ideas I'd like to explore in my art. So it's difficult to say how much time I actually spend on anything. But I think I started kicking around the vague idea for Dopamine Machines in maybe late 2021 or early 2022. And then I prototyped a couple very rough drafts over the spring and summer of 2022. My <a href="https://github.com/scyclow/dopaminemachines/commits/master?after=2790f3ecb26646a32d1f67ba868381083717da93+104&branch=master&qualified_name=refs%2Fheads%2Fmaster" target="_blank">git commit history</a> goes back to 6/2/22, and I remember doing an installation at <a href="https://tokenart.nyc/" target="_blank">Token Art NYC</a> that year with an early draft and a few pieces from what ended up becoming <a href="https://terminallyonline.eth.limo/" target="_blank">Terminally Online</a>. But then I kind of hit a wall and got distracted with other projects, so I put it on ice for a few months. Then earlier this year I fell into a bit of a funk where I was literally doing nothing for weeks on end, and I needed to start working on something to pull me out.</p>
         </div>
 
+        <section>
+          <div class="display">
+            <img src="./img/dm-6.gif">
+          </div>
+        </section>
+
         <div class="question">
           <p><strong>CG: Sounds like you needed some dopamine!</strong></p>
         </div>
@@ -248,6 +254,8 @@
           <p>SP: Yeah, I think it came out pretty well. The outputs with a lot of animating sections are particularly fun because it gives you a pretty diverse soundboard to play with. And even though most of them end up being fairly dissonant, a lot of them can be quite pleasant and engaging (if not overwhelming and slightly annoying).</p>
         </div>
 
+        <q>I've gone through a lot of emotional cycles with this project.</q>
+
         <div class="question">
           <p><strong>CG: I really like how much freedom the user has here. Between the sounds, the text-to-voice, and all the keyboard controls, they really have the ability to shape their own experience. How do you think people will take advantage of this?</strong></p>
         </div>
@@ -271,6 +279,13 @@
         <div class="answer">
           <p>SP: Yeah, I think all else being equal I'd prefer people to have a positive experience. But in general I'm learning that I'm not a huge fan of creating art that dictates to the viewer how they should feel, or what to think. That's up to them. I'd much rather create interesting blanks for them to fill in themselves.</p>
         </div>
+
+
+        <section>
+          <div class="display">
+            <img src="./img/dm-7.gif">
+          </div>
+        </section>
 
         <div class="question">
           <p><strong>CG: So how do you personally fill in those blanks? How does viewing Dopamine Machines make you feel? Where does your mind go?</strong></p>
@@ -297,6 +312,8 @@
           <p>SP: I think social media and the blockchain are the two big ones for me. And at the moment, I'm ironically (or maybe not so ironically) getting a pretty bg dopaminy payoff by interoping the two with Dopamine Machines. I earn a living mainly from selling NFTs, after all, so I tell myself that chasing social media engagement is all part of the job. But at the same time, having gone through a few Art Blocks drops, I know that I'm kind of setting myself up for a pretty strong dopamine deficit in about a week when everyone has moved on to another shiny new NFT.</p>
         </div>
 
+        <q>What else is there to sell people aside from a Dopamine Machine? It really feels like that's the logical conclusion to all of this. Let's just cut to the chase.</q>
+
         <div class="question">
           <p><strong>CG: It's interesting to think about Dopamine Machines as this digital object that can interop with other systems. Even though some of your prior work is a bit more blockchain-aware, it feels like the digital objectness of this project adds a subtle flavor that I don't think I picked up on initially.</strong></p>
         </div>
@@ -313,6 +330,13 @@
         <div class="answer">
           <p>SP: That was definitely a goal of mine!</p>
         </div>
+
+        <section>
+          <div class="display">
+            <img src="./img/dm-8.gif">
+          </div>
+        </section>
+
 
         <div class="question">
           <p><strong>CG: I feel that this project is really innovative on at least two counts. First, as I've just touched on, the techniques that you're using here are pretty novel in both the generative art world and the web development world. Frankly, I didn't realize that most of what you're doing here was even possible. Nor would it have even occurred to me to attempt it! But second, this is conceptually very different from anything out there. I hope you don't mind me saying that this would look very out of place on something like the <a href="https://reddit.com/r/generative" target="_blank">generative art subreddit</a>. But after playing with the algorithm and looking at multiple outputs side by side, there's no mistaking the fact that this <em>is</em> generative art. Where do you think this all fits within the larger generative art cannon?</strong></p>
@@ -351,18 +375,4 @@
 </html>
 
 
-
-
-
-
-
-
-
-
-
-FAKE BULLSHIT
-
-This is the Worst NFT Project Ever. Period.
-
-Dopamine Machines is everything wrong with the NFTs rolled into one project.
 
