--- a/dopamine-machines.html
+++ b/dopamine-machines.html
@@ -204,10 +204,6 @@
           <p>Steve Pikelny: Always a pleasure!</p>
         </div>
 
-
-
-
-
         <div class="question">
           <p><strong>CG: First off, I just want to say that Dopamine Machines looks incredible. I don't think I've been this excited for a project to be released in a really long time.</strong></p>
         </div>
@@ -261,7 +257,7 @@
         </div>
 
         <div class="answer">
-          <p>SP: I actually conducted a fair amount of user testing while developing it, so I've actually already seen a pretty wide variety of reactions. Some people immediately perk up and get genuinely engaged with what's on the screen. That's really funny to me because there's this clear element of satire where your web browser is shamelessly trying to manipulate you into experiencing this dopamine rush. And even though it doesn't try to hide these manipulative intentions from you, you still "fall for it". So, even people who are "in on the joke" end up having a genuine dopamine rush. But then at the opposite end of the spectrum, some people really fucking hate it. They'll be polite about it, but it's pretty clear that they have this sort of visceral discomfort with it. And ironically, I've found that the most common reaction to this discomfort is to click on more things, which makes it even more overwhelming. But those were helpful to watch because they uncovered some UX issues.</p>
+          <p>SP: I actually conducted a fair amount of user testing while developing it, so I've actually already seen a pretty wide variety of reactions. I showed it to a handful of friends and got pretty regular feedback from the Business Associates in my <a href="https://discord.steviep.xyz" target="_blank">discord server</a>. Some people immediately perk up and get genuinely engaged with what's on the screen. That's really funny to me because there's this clear element of satire where your web browser is shamelessly trying to manipulate you into experiencing this dopamine rush. And even though it doesn't try to hide these manipulative intentions from you, you still "fall for it". So, even people who are "in on the joke" end up having a genuine dopamine rush. But then at the opposite end of the spectrum, some people really fucking hate it. They'll be polite about it, but it's pretty clear that they have this sort of visceral discomfort with it. And ironically, I've found that the most common reaction to this discomfort is to click on more things, which makes it even more overwhelming. But those were helpful to watch because they uncovered some UX issues.</p>
         </div>
 
         <div class="question">
@@ -309,7 +305,7 @@
         </div>
 
         <div class="answer">
-          <p>SP: I think social media and the blockchain are the two big ones for me. And at the moment, I'm ironically (or maybe not so ironically) getting a pretty bg dopaminy payoff by interoping the two with Dopamine Machines. I earn a living mainly from selling NFTs, after all, so I tell myself that chasing social media engagement is all part of the job. But at the same time, having gone through a few Art Blocks drops, I know that I'm kind of setting myself up for a pretty strong dopamine deficit in about a week when everyone has moved on to another shiny new NFT.</p>
+          <p>SP: I think social media and the blockchain are the two big ones for me. And at the moment, I'm ironically (or maybe not so ironically) getting a pretty big dopamine payoff by interoping the two with Dopamine Machines. I earn a living mainly from selling NFTs, after all, so I tell myself that chasing social media engagement is all part of the job. But at the same time, having gone through a few Art Blocks drops, I know that I'm kind of setting myself up for a pretty strong dopamine deficit in about a week when everyone has moved on to another shiny new NFT.</p>
         </div>
 
         <q>What else is there to sell people aside from a Dopamine Machine? It really feels like that's the logical conclusion to all of this. Let's just cut to the chase.</q>
