--- a/2025-standout-artwork.html
+++ b/2025-standout-artwork.html
@@ -246,12 +246,12 @@
           Material Protocol's algorithmic meditation on repetition and variation creates mesmerizing loops that feel simultaneously mechanical and organic, questioning where pattern ends and meaning begins in generative systems.
         </p>
 
-        <h3>pxl dex by Kim Asendorf</h3>
+        <h3>PXL DEX by Kim Asendorf</h3>
         <p>
           Asendorf's tokenized ecosystem treats individual pixels as tradeable units within a decentralized exchange, reducing digital art to its atomic components and revealing the absurdity of financializing every aspect of creative production.
         </p>
 
-        <h3>dx terminal</h3>
+        <h3>DX Terminal</h3>
         <p>
           This anonymous project transforms command-line aesthetics into participatory performance where collectors execute terminal commands to generate their tokens, collapsing the distance between computer interface and artistic medium.
         </p>
@@ -259,6 +259,11 @@
         <h3>StarQuest by Maya Man</h3>
         <p>
           Man's genre-defying performance lecture merges AI-generated choreography with competitive dance culture and personal narrative, demonstrating how machine learning can serve as collaborator rather than replacement in embodied artistic practice.
+        </p>
+
+        <h3>Diatriber by Lorna Mills</h3>
+        <p>
+          Mills transforms YouTube weapons demonstrations on ballistic gel dummies into meticulously hand-crafted GIF animations, sculpting frame-by-frame explosions of blood, gel, and fake bone into what the artist calls a "giant temper tantrum" that implicates viewers in the spectacle of digitally mediated violence.
         </p>
       </section>
 
