--- a/2025-standout-artwork.html
+++ b/2025-standout-artwork.html
@@ -10,8 +10,8 @@
     <meta name='og:description' content='The Most Innovative Digital Art of 2025'>
     <meta name='twitter:description' content='The Most Innovative Digital Art of 2025'>
 
-    <meta name='twitter:image' content='./img/busd-thumbnail.png'>
-    <meta name='og:image' property='og:image' content='./img/busd-thumbnail.png'>
+    <meta name='twitter:image' content='https://cryptogateway.0ms.co/img/busd-thumbnail.png'>
+    <meta name='og:image' property='og:image' content='https://cryptogateway.0ms.co/img/busd-thumbnail.png'>
     <meta name='og:image:alt' content='Burnt US Dollars - Burning $100 Bill'>
 
     <meta name='title' content='CryptoGateway 2025 Standout Artwork'>
@@ -151,8 +151,8 @@
     <article>
       <section class='card'>
         <h2>Standout Artwork of 2025</h2>
-        <div>12/15/25</div>
-        <div>Views: 12847</div>
+        <div>12/17/25</div>
+        <div>Views: 17847</div>
 
         <div>
           SHARE:
